--- a/shopping_car.html
+++ b/shopping_car.html
@@ -13,7 +13,7 @@
                 <a href="zhuce.html"><li>注册</li></a>
                 <li><a href="my_orders.html">我的订单</li></a>
                 <li>
-                    <a href="my_orders.html"><img src="img/car.png"><span>购物车</span></a>
+                    <a href="shopping_car.html"><img src="img/car.png"><span>购物车</span></a>
                 </li>
                 <li>
                     <a href="favorite.html"><img src="img/star.png"><span>收藏夹</span></a>
