--- a/my_orders.html
+++ b/my_orders.html
@@ -40,7 +40,7 @@
                 </div>
                 <p class="price"> 15CNY</p>
                 <p class="zhuangtai">订单状态：已完成</p>
-                <a href="#" class="a">申请售后</a>
+                <a href="kefu.html">申请售后</a>
             </div>  
         </div>
 
