--- a/favorite.html
+++ b/favorite.html
@@ -31,27 +31,27 @@
     <div class="yi">
     <section >
       <div class="favorite-item">
-        <img src="img/goods.jpg" alt="收藏商品 1">
+        <a href="detail 9.html"><img src="img/goods.jpg" alt="收藏商品 1"></a>
         <p class="name">旗舰店2024新款休闲裤男宽松阔脚直筒秋冬季牛仔裤潮帅气百搭裤子</p>
         <p class="price">￥99.00</p>
       </div>
       <div class="favorite-item">
-        <img src="img/G22.png" alt="收藏商品 3">
+        <a href="detail 7.html"><img src="img/G22.png" alt="收藏商品 3"></a>
         <p class="name">绿箭果粒方维生素C口香糖35g*4组合装盒装清新口气糖果零食</p>
         <p class="price">￥35.9</p>
       </div>
       <div class="favorite-item">
-          <img src="img/G33.png" alt="收藏商品 4">
+        <a href="detail 6.html"><img src="img/G33.png" alt="收藏商品 4"></a>
           <p class="name">蔓越莓干250g曼越梅莓干烘培专用雪花酥材料即食水果干孕妇小包装</p>
           <p class="price">￥13.8</p>
       </div>
       <div class="favorite-item">
-            <img src="img/G44.png" alt="收藏商品 5">
+        <a href="detail 5.html"><img src="img/G44.png" alt="收藏商品 5"></a>
             <p class="name">悦霖严选NFC冷冻原榨广东香水柠檬汁原谅绿苦瓜柠檬茶专用原材料</p>
                 <p class="price">￥30.6</p>
       </div>
       <div class="favorite-item">
-              <img src="img/G55.png" alt="收藏商品 6">
+        <a href="detail 4.html"><img src="img/G55.png" alt="收藏商品 6"></a>
               <p class="name">【成都特产】红油蘸水490g香辣椒油凉拌调料油泼辣子商用</p>
                 <p class="price">￥32.1</p>
       </div><br>
