--- a/shopping_car.html
+++ b/shopping_car.html
@@ -3,7 +3,7 @@
 <head>
     <title>购物车</title>
 </head>
-<link rel="stylesheet" href="shopping_car.css">
+<link rel="stylesheet" href="css/shopping_car.css">
 <link rel="stylesheet" href="css/index.css">
 <body>
     <div class="site-nav">
